--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+certifi==2022.12.7
+charset-normalizer==2.1.1
+idna==3.4
+numpy==1.24.1
 obd==0.7.1
+opencv-python==4.7.0.68
+Pint==0.7.2
+pyserial==3.5
+requests==2.28.1
+six==1.15.0
+urllib3==1.26.14
